--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,16 +2,16 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title> {{ post_list.title }} -Blog</title>
+    <title> {{ post.title }} -Blog</title>
 </head>
 <body>
     <nav>
         <a href="/blog"/>Blog</a>
 
     </nav>
-    <h1> {{ post_list.title }}</h1>
-    <h4> {{ post_list.created_at }}</h4>
-    <p> {{ post_list.content }}</p>
+    <h1> {{ post.title }}</h1>
+    <h4> {{ post.created_at }}</h4>
+    <p> {{ post.content }}</p>
     <hr/>
     <h3>여기 댓글이 들어올 수 있겠죠?</h3>
     </body>
