--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -43,7 +43,16 @@
 
                         </header>
                         <!-- Preview image figure-->
-                        <figure class="mb-4"><img class="img-fluid rounded" src="{{ post.head_image.url}}" alt="..." /></figure>
+                        <figure class="mb-4">
+
+                             {% if post.head_image %}
+                                <img class="card-img-top" src="{{ post.head_image.url }}" alt="{{ post.title }} head_image">
+                            {%  else %}
+                                <img class="card-img-top" src="https://picsum.photos/seed/{{ post.id }}/800/200" alt="random_image">
+                             {%  endif %}
+
+
+                        </figure>
                         <!-- Post content-->
                         <section class="mb-5">
                             <p class="fs-5 mb-4">{{ post.content }}</p>
