--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -10,6 +10,7 @@
         <!-- Favicon-->
         <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen">
         <link rel="stylesheet" href="{% static 'blog/css/blog-post.css' %}" media="screen">
+         <script src="https://kit.fontawesome.com/726bbd6862.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <!-- Responsive navbar-->
@@ -56,6 +57,21 @@
                         <!-- Post content-->
                         <section class="mb-5">
                             <p class="fs-5 mb-4">{{ post.content }}</p>
+                            {% if post.file_upload %}
+                                <a href="{{ post.file_upload.url }}" role="button" class="btn btn-dark" download>
+                                    Download:
+                                    {% if post.get_file_ext == 'csv' %}
+                                        <i class="fas fa-file-csv"></i>
+                                    {% elif post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
+                                        <i class="fas fa-file-excel"></i>
+                                    {% elif post.get_file_ext == 'docx' or post.get_file_ext == 'doc' %}
+                                        <i class="fas fa-file-word"></i>
+                                    {%  else %}
+                                        <i class="far fa-file"></i>
+                                    {%  endif %}
+                                    {{ post.get_file_name }}
+                                </a>
+                            {% endif %}
                         </section>
                     </article>
                     <!-- Comments section-->
