--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -16,7 +16,7 @@
                 {% endif %}
                 <!-- Post meta content-->
 
-                <div class="text-muted fst-italic mb-2">Posted on {{ post.created_at }} by 개발예정</div>
+                <div class="text-muted fst-italic mb-2">Posted on {{ post.created_at }} by {{ post.author | upper }}</div>
 
             </header>
             <!-- Preview image figure-->
