--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -37,6 +37,18 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                {% if user.socialaccount_set.all.0.get_avatar_url %}
+
+                                        <img class="'rounded-circle" width="25px" src="{{ user.socialaccount_set.all.0.get_avatar_url }}" alt="" />
+
+                                {% else %}
+                                        {%  if user.email %}
+                                            <img class="'rounded-circle"  width="25px" src="https://doitdjango.com/avatar/id/453/404ee78239192c89/svg/{{ user.email   }}"  />
+                                        {% else %}
+                                            <img class="'rounded-circle"  width="25px"  src="https://doitdjango.com/avatar/id/453/404ee78239192c89/svg/test@naver.com"  />
+                                        {% endif %}
+
+                                {%  endif %}
                                 {{ user.username }}
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
