--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -74,6 +74,7 @@
     <!-- Comments section-->
     <section class="mb-5">
         <div class="card bg-light">
+            <h5 class="card-header">Leave a Comment:</h5>
             <div class="card-body">
                 <!-- Comment form-->
                 {% if user.is_authenticated %}
