--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -98,7 +98,8 @@
                             <img class="img-fluid" src="{% static 'single_pages/images/port1.png' %}">
                         </div>
                         <div class="col-lg-5">
-                            <p></p>
+                            <p >건국대학교(글로컬) 학생들만 사용 할 수 있는 채팅 앱입니다. 처음에는 익명으로 시작하지만, 친해지고 나서 서로 동의하에 프로필사진이나 학생정보에 대해서 공유 할 수 있습니다. 가입시, 학교포탈에서 정보를 받아오기 때문에 사칭이나 거짓말이 불가능합니다.
+                                <br/> <p class="font-weight-bold">현재는 서비스 종료!</p></p>
                             <a role="button" href="https://drive.google.com/file/d/1gAdLUIy8rj3AHyH9_py_GmxT1qf_2w0F/view?usp=sharing" class="btn btn-light"><i class="fas fa-file-pdf"> IF.pdf</i></a>
                         </div>
 
@@ -115,7 +116,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id=" inflearnDjangoModalLabel">파이썬 사용자를 위한 웹개발 입문 A to Z Django + Bootstrap</h5>
+                    <h5 class="modal-title" id=" inflearnDjangoModalLabel">카카오톡 프로필 조회</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -126,8 +127,9 @@
                             <img class="img-fluid" src="{% static 'single_pages/images/port2.png' %}">
                         </div>
                         <div class="col-lg-5">
-                            <p>파이썬 초보를 대상으로 한 웹개발 강좌입니다. 인프런에서 서비스하고 있습니다.</p>
-                            <button type="button" class="btn btn-light"><i class="fas fa-chalkboard-teacher"></i> 인프런</button>
+                            <p>친구에게 프로필 차단을 당했거나, 멀티 프로필이 아닌 기본 프로필이 궁금하다면 이용하세요!</p>
+                            <p class="font-weight-bold">장난으로 만들었지만 일일 평균 이용자 2000명이라서 서비스 유지중...</p>
+                            <a role="button" href="http://kakao.chanwhi.r-e.kr/" class="btn btn-light"><i class="fas fa-external-link-square-alt"></i> 접속 </a>
                         </div>
                     </div>
                 </div>
