--- a/blog/templates/blog/base_full_width.html
+++ b/blog/templates/blog/base_full_width.html
@@ -8,6 +8,25 @@
         <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen">
 
     <script src="https://kit.fontawesome.com/726bbd6862.js" crossorigin="anonymous"></script>
+
+    <style>
+
+        body {
+            background: url('/static/single_pages/images/background2.jpg') no-repeat center center fixed;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            background-size: cover;
+            -o-background-size: cover;
+        }
+
+        #main-area{
+            background: white;
+            border-radius: 2%;
+            box-shadow: 5px 5px 10px black , 0 0 15px black ,0 0 30px black ;
+        }
+
+    </style>
+
 </head>
 
 <body>
