--- a/single_pages/static/single_pages/css/landing.css
+++ b/single_pages/static/single_pages/css/landing.css
@@ -1,5 +1,5 @@
 body {
-    background: url('../images/background.jpg') no-repeat center fixed;
+    background: url('../images/background.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -11,5 +11,5 @@ section {
 }
 
 .card {
-    background-color: rgba(255,255,255,0.6) !important;
+    background-color: rgba(255,255,255,0.5) !important;
 }
