--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -26,22 +26,22 @@
 
                    </p>
                    <ul>
-                       <li>내 인생1</li>
+                       <small class="text-muted">
+                       <li>내 코딩인생</li>
                        <ul>
-                           <li></li>
-                           <li></li>
+
+                           <li>어릴적부터 게임에서 핵 쓰거나, 프리(사설)서버 구축하고 놈. </li>
+                           <li>garry's mod 에서 express2로 코딩에 입문, 적성을 찾게됨.</li>
+                           <li>컴퓨터 공학과에 입학해서 즐겁게 프로그래밍 및 전공을 배움.</li>
+                           <li>garry's mod 에서 luascript를 본격적으로 시작. 그동안 망상했던 것들을 열심히 코딩으로 구현해봄. </li>
+                           <li>대학교 졸업후, 취업준비 겸 여러가지 관심 있던것들을 공부중.</li>
+
                        </ul>
-                       <li>내 인생2</li>
-                       <ul>
-                           <li></li>
-                           <li></li>
-                       </ul>
-                       <li>내 인생3</li>
-                       <ul>
-                           <li></li>
-                           <li></li>
-                       </ul>
+
+                       </small>
+
                    </ul>
+                   <a role="button" href="https://blog.naver.com/cksgnl74" class="btn btn-light"><i class="fas fa-external-link-square-alt"></i> 네이버블로그 </a>
                </div>
                 <div class="col-lg-4">
                     <img class="img-fluid" src="{% static 'single_pages/images/me.jpg' %}" />
