--- a/single_pages/templates/single_pages/landing.html
+++ b/single_pages/templates/single_pages/landing.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="{% static 'single_pages/css/landing.css' %}" media="screen">
 
     <script src="https://kit.fontawesome.com/726bbd6862.js" crossorigin="anonymous"></script>
+    <style>
+
+        .card_border {
+
+           box-shadow: 2px 2px 7px black , 0 0 10px black ,0 0 14px white  ;
+        }
+
+    </style>
 </head>
 
 <body>
@@ -17,16 +25,15 @@
 
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-lg-6 text-light">
-                    <h1 class="mt-5"></h1>
-                    <p></p>
+                <div class="col-lg-6 mt-5 text-light">
+
                 </div>
-                <div class="col-lg-5 mt-5">
-                    <h2 class="text-light">Blog - Recent posts</h2>
+                <div class="col-lg-6 mt-5">
+                    <h5 class="text-light">최근 포스트</h5>
                     {% for post in recent_posts  %}
-                        <div class="card mt-1">
+                        <div class="card mt-1 mb-2 card_border">
                             <div class="card-body">
-                                <h6><a href="{{ post.get_absolute_url }}" class="text-decoration-none text-dark">{{ post.title }}</a></h6>
+                                <h6><a href="{{ post.get_absolute_url }}" class="text-decoration-none text-white">{{ post.title }}</a></h6>
                                 <span class="badge badge-pill badge-light float-right">
                                     <img class="mr-1 rounded-circle" width="20px" src="{{ post.get_avatar_url }}" alt="{{ post.author }}" />
                                     {{ post.author.username }}&nbsp;&nbsp;{{ post.created_at }}
@@ -35,6 +42,7 @@
                         </div>
                     {%  endfor %}
                 </div>
+
             </div>
         </div>
     </section>
