--- a/blog/templates/blog/base_full_width.html
+++ b/blog/templates/blog/base_full_width.html
@@ -43,7 +43,10 @@
         </div>
     </div>
 
-    {%  include 'blog/footer.html' %}
+    <div class="fixed-bottom">
+        {%  include 'blog/footer.html' %}
+
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
