디자인 변경

--- a/blog/templates/blog/base_full_width.html
+++ b/blog/templates/blog/base_full_width.html
@@ -25,6 +25,10 @@
             box-shadow: 5px 5px 10px black , 0 0 15px black ,0 0 30px black ;
         }
 
+        .asteriskField {
+            display: none;
+        }
+
     </style>
 
 </head>
