--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -21,12 +21,12 @@
         #main-area{
             background: white;
             border-radius: 2%;
-            box-shadow: 5px 5px 5px black , 0 0 5px black ,0 0 15px black  ;
+            box-shadow: 5px 5px 5px black , 0 0 5px black ,0 0 5px black  ;
         }
 
         .border_card{
             border-radius: 2%;
-            box-shadow: 5px 5px 5px black , 0 0 5px black ,0 0 15px black  ;
+            box-shadow: 5px 5px 5px black , 0 0 5px black ,0 0 5px black  ;
 
         }
 
@@ -36,7 +36,11 @@
 
         .card_border{
             border: 1px solid rgba(0,0,0,.2) !important;
-            box-shadow: 5px 5px 5px black , 0 0 5px black ,0 0 15px black  ;
+            box-shadow: 4px 4px 4px black , 0 0 4px black ,0 0 5px black  ;
+        }
+
+        .asteriskField {
+            display: none;
         }
     </style>
 
