--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -25,7 +25,7 @@
                 <div class="text-muted fst-italic mb-2">Posted on {{ post.created_at }} by {{ post.author | upper }}</div>
 
                 {% if user.is_authenticated and user == post.author %}
-                    <a class="btn btn-info btn-sm float-right" href='/blog/update_post/{{ post.pk }}/' role="button"><i class="fas fa-pen"> Edit Post</i></a>
+                    <a class="btn btn-info btn-sm float-right mt-2 mb-2" href='/blog/update_post/{{ post.pk }}/' role="button"><i class="fas fa-pen"> 글 수정</i></a>
                 {% endif %}
 
             </header>
@@ -82,10 +82,11 @@
                     {%  csrf_token %}
                     <div class="form-group">
                     {{ comment_form | crispy }}
-
+                    <button type="submit" class="btn btn-info float-right">등록</button>
                     </div>
                     <br/>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+
+
                 </form>
                 {% else %}
                     <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="#" data-toggle="modal" data-target="#loginModal">Log in and leave a comment</a>
@@ -94,17 +95,18 @@
 
                 {% if post.comment_set.exists %}
                     {% for comment in post.comment_set.iterator %}
-                        <div class="media mb-4"  id="comment-{{ comment.pk }}">
+                        <hr/>
+                        <div class="media mb-4 mt-5"  id="comment-{{ comment.pk }}">
                             <img class="d-flex mr-3 rounded-circle" src="{{ comment.get_avatar_url }}" alt="{{ comment.author }}" width="60px" />
                             <div class="media-body">
                                 {% if user.is_authenticated and comment.author == user %}
                                     <div class="float-right">
 
                                         <a role="button" class="btn btn-sm btn-info" id="comment-{{ comment.pk }}-update-btn" href="/blog/update_comment/{{ comment.pk }}/">
-                                            edit
+                                            수정
                                         </a>
                                         <a role="button" href="#" id="comment-{{ comment.pk }}-delete-modal-btn" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#deleteCommentModal-{{ comment.pk }}">
-                                            delete
+                                            삭제
                                         </a>
 
                                     </div>
@@ -113,7 +115,7 @@
                                         <div class="modal-dialog" role="document">
                                             <div class="modal-content">
                                                 <div class="modal-header">
-                                                    <h5 class="modal-title" id="deleteModalLabel">Are You Sure?</h5>
+                                                    <h5 class="modal-title" id="deleteModalLabel">정말 삭제하시겠습니까?</h5>
                                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                         <span aria-hidden="true">&times;</span>
                                                     </button>
@@ -122,8 +124,8 @@
                                                     <del>{{ comment | linebreaks }}</del>
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                                    <a role="button" class="btn btn-danger" href="/blog/delete_comment/{{ comment.pk }}/">Delete</a>
+                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
+                                                    <a role="button" class="btn btn-danger" href="/blog/delete_comment/{{ comment.pk }}/">삭제</a>
                                                 </div>
                                             </div>
                                         </div>
