--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,7 +9,7 @@
         {% if user.is_authenticated %}
             {% if user.is_superuser or user.is_staff %}
                 <a class="btn btn-info btn-sm float-right" href="/blog/create_post/" role="button">
-                <i class="fas fa-pen"></i>&nbsp;&nbsp;New Post
+                <i class="fas fa-pen"></i>&nbsp;&nbsp;글 작성
                 </a>
             {%  endif %}
         {% endif %}
@@ -50,7 +50,7 @@
                         <br/>
                     {% endif %}
 
-                    <a href="{{ p.get_absolute_url }}" class="btn btn-primary">Read More &rarr;</a>
+                    <a href="{{ p.get_absolute_url }}" class="btn btn-info">더보기 &rarr;</a>
                 </div>
                 <div class="card-footer text-muted">
                     Posted on {{ p.created_at}} by
@@ -69,23 +69,23 @@
             {% if page_obj.has_next %}
 
                 <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.next_page_number }}">&larr; Older</a>
+                    <a class="page-link" href="?page={{ page_obj.next_page_number }}">&larr; 이전</a>
                 </li>
 
             {% else %}
                 <li class="page-item disabled">
-                    <a class="page-link" href="#">&larr; Older</a>
+                    <a class="page-link" href="#">&larr; 이전</a>
                 </li>
             {%  endif %}
 
             {%  if page_obj.has_previous %}
                 <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Newer &rarr;</a>
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}">다음 &rarr;</a>
                 </li>
             {%  else %}
 
                 <li class="page-item disabled">
-                    <a class="page-link" href="#">Newer &rarr;</a>
+                    <a class="page-link" href="#">다음 &rarr;</a>
                 </li>
 
             {% endif %}
