디자인 변경

--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -73,7 +73,8 @@
                         <img class="card-img-top" src="{% static 'single_pages/images/port2.png' %}"  />
                         <div class="card-body">
                             <h5 class="card-title">카카오톡 프로필 조회</h5>
-                            <p><small class="text-muted">[ Nodejs(express), python ]</small><br/><br/>카톡 프로필을 웹을 통해서 볼 수 있습니다.</p>
+                            <p><small class="text-muted">[ <img src="https://img.shields.io/badge/기술이름-#제외색상번호?style=for-the-badge&logo=아이콘이름&logoColor=white">
+                                , python ]</small><br/><br/>카톡 프로필을 웹을 통해서 볼 수 있습니다.</p>
                         </div>
                     </div>
                 </div>
