디자인 변경

--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -64,7 +64,7 @@
                         <img class="card-img-top" src="{% static 'single_pages/images/port1.png' %}"  />
                         <div class="card-body">
                             <h5 class="card-title">IF -건국대학교(글로컬)</h5>
-                            <p><small class="text-muted">[  <img src="https://img.shields.io/badge/node.js-339933?style=for-the-badge&logo=Node.js&logoColor=white">, <img src="https://img.shields.io/badge/Android-3DDC84?style=for-the-badge&logo=Android&logoColor=white"> , <img src="https://img.shields.io/badge/swift-F05138?style=for-the-badge&logo=swift&logoColor=white"> , <img src="https://img.shields.io/badge/mysql-4479A1?style=for-the-badge&logo=mysql&logoColor=white"> , <img src="https://img.shields.io/badge/javascript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"> ]</small><br/><br/>모교 학생들만 쓸수 있는 채팅 앱입니다.</p>
+                            <p><small class="text-muted">[ Nodejs(express), Android(java) , Ios(swift) ]</small><br/><br/>모교 학생들만 쓸수 있는 채팅 앱입니다.</p>
                         </div>
                     </div>
                 </div>
@@ -73,8 +73,7 @@
                         <img class="card-img-top" src="{% static 'single_pages/images/port2.png' %}"  />
                         <div class="card-body">
                             <h5 class="card-title">카카오톡 프로필 조회</h5>
-                            <p><small class="text-muted">[ <img src="https://img.shields.io/badge/python-3776AB?style=for-the-badge&logo=python&logoColor=white">
-                                , <img src="https://img.shields.io/badge/node.js-339933?style=for-the-badge&logo=Node.js&logoColor=white"> ,  ]</small><br/><br/>카톡 프로필을 웹을 통해서 볼 수 있습니다.</p>
+                            <p><small class="text-muted">[ Nodejs(express), python ]</small><br/><br/>카톡 프로필을 웹을 통해서 볼 수 있습니다.</p>
                         </div>
                     </div>
                 </div>
