--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -11,11 +11,11 @@
     <meta property="og:type"               content="website" />
     <meta property="og:title"              content="챠니의 잡동사니" />
     <meta property="og:description"        content="챠니의 잡동사니 입니다." />
-    <meta property="og:image"              content=<img src="https://img.icons8.com/external-vitaliy-gorbachev-lineal-color-vitaly-gorbachev/60/000000/external-fire-blogger-vitaliy-gorbachev-lineal-color-vitaly-gorbachev.png"/> />
+    <meta property="og:image"              content="https://chanwhi.com/favicon.ico" />
     <meta name="twitter:card" content="summary">
 
     <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen">
-     <link rel ="shortcut icon" href="https://img.icons8.com/external-vitaliy-gorbachev-lineal-color-vitaly-gorbachev/60/000000/external-fire-blogger-vitaliy-gorbachev-lineal-color-vitaly-gorbachev.png" />
+     <link rel ="shortcut icon" href="https://chanwhi.com/favicon.ico" />
 
     <script src="https://kit.fontawesome.com/726bbd6862.js" crossorigin="anonymous"></script>
 </head>
