디자인 변경

--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen">
     <link rel="stylesheet" href="{% static 'single_pages/css/about_me.css' %}" media="screen">
 
+    <meta name="description" content="챠니의 잡동사니 입니다.">
+    <meta property="og:url"                content="https://chanwhi.com/" />
+    <meta property="og:type"               content="website" />
+    <meta property="og:title"              content="챠니의 잡동사니" />
+    <meta property="og:description"        content="챠니의 잡동사니 입니다." />
+    <meta property="og:image"              content="{% static 'single_pages/images/favicon.ico' %}" />
+    <meta name="twitter:card" content="summary">
+
+
+     <link rel ="shortcut icon" href="{% static 'single_pages/images/favicon.ico' %}" />
+
+
     <script src="https://kit.fontawesome.com/726bbd6862.js" crossorigin="anonymous"></script>
 </head>
 
